--- a/slides.Rmd
+++ b/slides.Rmd
@@ -6,7 +6,7 @@ subtitle: |
 author: |
     | Karlo Guidoni Martins
 date: |
-    | 29 de Julho de 2020
+    | 06 de Maio de 2021
 fontsize: 10pt          # funciona com pdflatex. veja `latex_engine`
 classoption: "compress, aspectratio=169" # try 43 or 169
 mainfont: "Ubuntu Mono" # use Arial no Windows
