--- a/sources/header.tex
+++ b/sources/header.tex
@@ -79,7 +79,7 @@
 \setbeamerfont{institute}{size=\large}
 
 %% a configuração acima sobrescreve essa abaixo
-\institute{Universidade Federal de Goiás \\ Programa de Pós-Graduação em Ecologia \& Evolução}
+\institute{Fundação Brasileira para o Desenvolvimento Sustentável}
 
 %% We can also place a logo
 %\titlegraphic{\hfill\includegraphics[height=1cm]{someLogo.pdf}}
